--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,10 @@
 language: java
+jdk:
+  - oraclejdk8
+before_script:
+  - chmod +x gradlew
 script:
-- ./gradlew
-- bash <(curl -s https://codecov.io/bash)
+  - ./gradlew check
+  - ./gradlew codeCoverageReport
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
