--- a/build.gradle
+++ b/build.gradle
@@ -38,10 +38,11 @@ jacocoTestReport {
 }
 
 dependencies {
+    compile("org.junit.jupiter:junit-jupiter-params:${junitJupiterVersion}")
+
     // JUnit Jupiter API and TestEngine implementation
     testCompile("org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}")
     testRuntime("org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}")
-    testRuntime("org.junit.jupiter:junit-jupiter-params:${junitJupiterVersion}")
 
     // Only needed to run tests in an (IntelliJ) IDE(A) that bundles an older version
     testRuntime("org.junit.platform:junit-platform-launcher:${junitPlatformVersion}")
