--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ jacocoTestReport {
     reports {
         xml.enabled true
 //        xml.destination "${buildDir}/reports/jacoco/report.xml"
-        html.enabled false
+        html.enabled true
 //        csv.enabled false
     }
 }
